feat: add tabs width variant

--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -217,6 +217,7 @@
 			<div class="tw-mt-12">
 				<oeb-tabs
 					[variant]="'bluebackground'"
+					[width]="'min_max'"
 					(onTabChanged)="onNestedTabChange($event)"
 					[tabs]="badgeTemplateTabs"
 					[activeTab]="activeTabBadgeTemplate"
