fix: capitalization in English translation
Capitalizing the word "institution" properly on the learning path catalog page

--- a/src/app/catalog/components/learningpath-catalog/learningpath-catalog.component.html
+++ b/src/app/catalog/components/learningpath-catalog/learningpath-catalog.component.html
@@ -19,8 +19,8 @@
 							in <span [countUp]="issuersWithLps.length">{{ issuersWithLps.length }}</span>
 							{{
 								issuersWithLps.length === 1
-									? ('General.institution' | translate)
-									: ('General.institutions' | translate)
+									? ('LearningPath.institution' | translate)
+									: ('LearningPath.institutions' | translate)
 							}}
 						}
 					</ng-template>
