Fix/button translations and headings (#1722)
* fix: add proper button loading messages

 for login and signup buttons including translations

* fix: remove extra whitespaces

* fix: capitalization in English translation

Capitalizing the word "institution" properly on the learning path catalog page

--- a/src/app/catalog/components/learningpath-catalog/learningpath-catalog.component.html
+++ b/src/app/catalog/components/learningpath-catalog/learningpath-catalog.component.html
@@ -11,18 +11,16 @@
 							{{ 'General.noLearningPaths' | translate }}
 						} @else {
 							<span [countUp]="learningPaths.length">{{ learningPaths.length }}</span>
-							&nbsp;
 							{{
 								learningPaths.length === 1
 									? ('General.learningPath' | translate)
 									: ('General.learningPaths' | translate)
 							}}
 							in <span [countUp]="issuersWithLps.length">{{ issuersWithLps.length }}</span>
-							&nbsp;
 							{{
 								issuersWithLps.length === 1
-									? ('General.institution' | translate)
-									: ('General.institutions' | translate)
+									? ('LearningPath.institution' | translate)
+									: ('LearningPath.institutions' | translate)
 							}}
 						}
 					</ng-template>
