--- a/src/app/issuer/components/network-badges/network-badges.component.html
+++ b/src/app/issuer/components/network-badges/network-badges.component.html
@@ -89,7 +89,7 @@
 	} @else {
 		<div class="tw-mt-12">
 			<network-shared-badges-datatable
-				[badges]="sharedBadges"
+				[badges]="sharedBadgeResults"
 				(redirectToBadgeDetail)="routeToBadgeDetail($event.badge, $event.issuerSlug, $event.focusRequests)"
 				(directBadgeAward)="routeToBadgeAward($event)"
 				(qrCodeAward)="routeToQRCodeAward($event)"
