Feat/more network findings (#1716)
* feat: run inject schematic

* fix: layout public network component

* fix: routing networkcard

* fix: unify layout public issuer

* fix: update count after loading

* feat: add button variant

* feat: use dropdown in add institution component

* fix: output

* feat: translations

* feat: use dropdown in add institution component

* fix: optional url for networks

* feat: add tabs width variant

* fix: count

* fix: download states

* feat: recipient detail network info

* feat: network info assertion page

* feat: add translation template

* fix: recipient counts

* fix: rm log

* fix: prettier

* fix: duplicate template rendering

* fix: clean up

* fix: qrcodes in partner issuers tab

---------

Co-authored-by: David Scheidt <scheidtdav@users.noreply.github.com>

--- a/src/app/issuer/components/network-dashboard/network-dashboard.component.html
+++ b/src/app/issuer/components/network-dashboard/network-dashboard.component.html
@@ -71,7 +71,8 @@
 </ng-template>
 
 <ng-template #addInstitutionsTemplate>
-	<add-institution [network]="network()" (institutionsInvited)="onInstitutionsInvited()"> </add-institution>
+	<add-institution [network]="network()" [invites]="networkInvites()" (institutionsInvited)="onInstitutionsInvited()">
+	</add-institution>
 </ng-template>
 
 <ng-template #badgesTemplate>
