fix: dont show inner tabs on public issuer component

--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -212,7 +212,7 @@
 	></oeb-tabs>
 
 	<ng-template #badgesTemplate>
-		@if (env.networksEnabled) {
+		@if (env.networksEnabled && !public) {
 			<div class="tw-mt-12">
 				<oeb-tabs
 					[variant]="'bluebackground'"
@@ -225,7 +225,6 @@
 				</oeb-tabs>
 			</div>
 		}
-
 		@switch (activeTabBadgeTemplate) {
 			@case ('issuer-badges') {
 				<ng-container *ngTemplateOutlet="issuerBadgesTemplate"></ng-container>
