refactor badge detail page and related components (#1720)
* refactor: check margins and paddings against mockup

* refactor: sidebar on badge detail table for responsiveness

* fix: visual bugs

---------

Co-authored-by: jona159 <65068389+jona159@users.noreply.github.com>

--- a/src/app/common/components/badge-detail/badge-detail.component.scss
+++ b/src/app/common/components/badge-detail/badge-detail.component.scss
@@ -1,17 +1,3 @@
-.badge-sidebar-internal {
-	padding: calc(var(--gridspacing) * 4);
-	padding-top: calc(var(--gridspacing) * 4);
-	background-color: var(--color-lavender);
-}
-
-@media (min-width: 768px) {
-	.badge-sidebar-internal {
-		padding-top: calc(var(--gridspacing) * 6);
-		display: flex;
-		flex-direction: column;
-	}
-}
-
 .tag {
 	--typography-size: 12px;
 	font-family: var(--font-family);
@@ -35,4 +21,25 @@
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	overflow: hidden;
+}
+
+div.headerMenuGrid {
+	display: grid;
+	gap: 16px;
+	grid-template-columns: 1fr min-content;
+	grid-template-areas:
+		'main overflow-menu'
+		'secondary secondary';
+
+	.main-action {
+		grid-area: main;
+	}
+
+	.overflow-menu {
+		grid-area: overflow-menu;
+	}
+
+	.secondary {
+		grid-area: secondary;
+	}
 }
