feat: auto set end date on qr form

--- a/src/app/common/components/badge-detail/badge-detail.component.html
+++ b/src/app/common/components/badge-detail/badge-detail.component.html
@@ -230,7 +230,7 @@
 													>
 													</ng-icon>
 													<span
-														class="tw-text-oebblack tw-font-bold tw-text-sm tw-ml-1"
+														class="tw-text-oebblack tw-font-bold tw-text-sm tw-ml-1 tw-uppercase"
 														[innerHTML]="'Badge.awardCriteria' | translate"
 													></span>
 												</dt>
