refactor: format criteria section

--- a/src/app/common/components/badge-detail/badge-detail.component.html
+++ b/src/app/common/components/badge-detail/badge-detail.component.html
@@ -224,28 +224,29 @@
 															hlm
 															name="lucideAward"
 															class="tw-w-6 tw-h-6 tw-text-purple"
-														>
-														</ng-icon>
+														/>
 														<span
-															class="tw-text-oebblack tw-font-bold tw-text-sm tw-ml-1"
+															class="tw-text-oebblack tw-font-bold tw-text-sm tw-ml-2 tw-uppercase"
 															[innerHTML]="'Badge.awardCriteria' | translate"
 														></span>
 													</dt>
 												</ng-template>
 												@if (hasCriteria) {
 													<dd>
-														<ul class="tw-pr-2 tw-pl-8 tw-list-inside tw-list-disc">
+														<ul class="tw-pl-10 tw-mt-1 tw-list-inside tw-list-disc">
 															@for (
 																criteria of config.awardCriteria;
 																track criteria.name
 															) {
-																<li class="tw-mb-1">
-																	<span class="tw-text-oebblack">{{
-																		criteria.name
-																	}}</span>
+																<li class="tw-mb-2">
+																	<p hlmP [size]="'sm'" class="tw-inline">
+																		{{ criteria.name }}
+																	</p>
 																	@if (criteria.description) {
 																		<p
-																			class="tw-text-oebblack tw-italic tw-font-thin tw-ml-4 tw-mt-1"
+																			hlmP
+																			[size]="'sm'"
+																			class="tw-text-darkgrey tw-italic tw-ml-4 tw-mt-1"
 																		>
 																			{{ criteria.description }}
 																		</p>
