--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -111,6 +111,10 @@
 						</a>
 					}
 
+					<a class="oeb-navitem" routerLinkActive="oeb-navitem-is-active" [routerLink]="['/dashboard']">
+						Dashboard
+					</a>
+
 					@if (showIssuersTab()) {
 						<a class="oeb-navitem" routerLinkActive="oeb-navitem-is-active" [routerLink]="['/issuer']">{{
 							'NavItems.myInstitutions' | translate
@@ -264,6 +268,7 @@
 
 				<hr class="mobilenav-x-rule" />
 				<a [routerLink]="['/recipient/badges']">{{ 'General.backpack' | translate }}</a>
+				<a [routerLink]="['/dashboard']">Dashboard</a>
 				<!-- <a [routerLink]="['/recipient/badge-collections']">{{ 'General.collections' | translate }}</a> -->
 				@if (showIssuersTab()) {
 					<a [routerLink]="['/issuer']">{{ 'NavItems.myInstitutions' | translate }}</a>
