--- a/src/app/issuer/components/learningpath-edit-form/learningpath-edit-form.component.html
+++ b/src/app/issuer/components/learningpath-edit-form/learningpath-edit-form.component.html
@@ -168,45 +168,33 @@
 								<span class="tw-italic">{{ 'LearningPath.combineBadgeCategories' | translate }}</span>
 								<span> {{ 'LearningPath.min2Badges' | translate }}</span>
 							</p>
-							<div class="tw-flex tw-flex-wrap tw-py-6">
+							<div class="tw-flex tw-flex-wrap tw-py-6 tw-justify-between">
 								<!-- Search  -->
-								<div class="tw-pb-2 md:tw-pb-0">
+								<div class="tw-pb-2 md:tw-pb-0 tw-flex tw-relative tw-items-center">
 									<input
 										type="text"
 										name="forminput"
-										changeOrder
-										class="tw-border-solid tw-border-purple tw-bg-white tw-mr-6"
+										class="!tw-bg-white tw-w-full tw-border-1 tw-border-purple min-[880px]:tw-w-[530px] tw-border-solid tw-rounded-lg tw-p-2"
 										placeholder="{{ 'Badge.searchBadges' | translate }}"
 										[(ngModel)]="searchQuery"
 										[ngModelOptions]="{ standalone: true }"
 										hlmInput
 									/>
+									<ng-icon
+										hlm
+										name="lucideSearch"
+										class="tw-w-8 tw-h-8 tw-absolute tw-top-1/2 tw-right-2 -tw-translate-y-1/2 tw-pointer-events-none tw-text-purple"
+									></ng-icon>
 								</div>
+								<!-- Group By  -->
+								<oeb-select
+									class="md:tw-w-[270px] oeb"
+									[options]="groupOptions"
+									[control]="groupControl"
+									[noTopMargin]="true"
+								></oeb-select>
 							</div>
 
-							<div class="l-actionbar-x-groupby">
-								<label class="l-flex l-flex-2x">
-									<div class="forminput">
-										<div class="forminput-x-inputs">
-											<select
-												[(ngModel)]="groupBy"
-												#selectInput
-												class="border tw-font-normal"
-												[ngClass]="{ 'tw-font-bold!': groupBy !== '---' }"
-												[ngModelOptions]="{ standalone: true }"
-												id="badge-catalog-select"
-											>
-												<option [ngValue]="'---'">{{ 'Badge.groupBy' | translate }}</option>
-												@for (option of groups; track option) {
-													<option [value]="option">
-														{{ option }}
-													</option>
-												}
-											</select>
-										</div>
-									</div>
-								</label>
-							</div>
 							@if (groupBy === '---') {
 								<div class="tw-grid tw-grid-cols-badgesLp tw-gap-6 tw-mt-4">
 									@for (badge of badgeResults; track badge; let i = $index) {
