fix: add studyload

--- a/src/app/issuer/components/network-learningpaths/network-learningpaths.component.html
+++ b/src/app/issuer/components/network-learningpaths/network-learningpaths.component.html
@@ -13,6 +13,7 @@
 							[slug]="lp.slug"
 							[requested]="lp.requested"
 							[progress]="lp.progress"
+							[studyLoad]="calculateStudyLoad(lp)"
 						></bg-learningpathcard>
 					}
 				</div>
