--- a/src/app/issuer/components/network-learningpaths/network-learningpaths.component.html
+++ b/src/app/issuer/components/network-learningpaths/network-learningpaths.component.html
@@ -27,11 +27,11 @@
 					class="tw-italic tw-text-purple tw-text-lg tw-mb-4"
 					[innerHTML]="'Network.createLpInfo' | translate"
 				></p>
-				<section class="tw-gap-2 tw-flex tw-flex-col">
-					<oeb-button [width]="'min_320'" [text]="'Network.createBadge' | translate"> </oeb-button>
+				<section class="tw-gap-2 tw-flex tw-flex-col tw-w-max">
+					<oeb-button [width]="'full_width'" [text]="'Network.createBadge' | translate"> </oeb-button>
 					<oeb-button
 						variant="secondary"
-						[width]="'min_320'"
+						[width]="'full_width'"
 						[weight]="'normal'"
 						[text]="'Badge.shareBadgeOnNetwork' | translate"
 						[routerLink]="['/issuer/issuers']"
