--- a/src/app/issuer/components/network-learningpaths/network-learningpaths.component.html
+++ b/src/app/issuer/components/network-learningpaths/network-learningpaths.component.html
@@ -12,6 +12,8 @@
 							[tags]="lp.tags"
 							[slug]="lp.slug"
 							[studyLoad]="calculateStudyLoad(lp)"
+							[issuerSlug]="lp.issuer_id"
+							[public]="false"
 						></bg-learningpathcard>
 					}
 				</div>
