--- a/src/app/common/components/badge-detail/badge-detail.component.html
+++ b/src/app/common/components/badge-detail/badge-detail.component.html
@@ -7,7 +7,7 @@
 					<bg-breadcrumbs [linkentries]="config.crumbs"> </bg-breadcrumbs>
 				</div>
 				<div class="oeb-section-sm">
-					<div class="tw-flex tw-flex-row tw-justify-between tw-flex-wrap tw-gap-4">
+					<div class="tw-flex tw-flex-row tw-justify-between tw-items-start tw-gap-4">
 						<h1
 							hlmH1
 							class="tw-text-purple tw-font-extrabold tw-hyphens-auto tw- break-words oeb-break-words"
