--- a/src/app/issuer/components/add-institution/add-institution.component.html
+++ b/src/app/issuer/components/add-institution/add-institution.component.html
@@ -88,7 +88,8 @@
 		<oeb-button
 			[disabled]="!selectedIssuers.length || inviting"
 			(click)="inviteInstitutions(selectedIssuers)"
-			[text]="'Network.addInstitutions' | translate"
+			[text]="'Network.inviteInstitutions' | translate"
+			size="md"
 		>
 		</oeb-button>
 	</div>
