feat: add youth welfare organization as issuer category

--- a/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
+++ b/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
@@ -91,6 +91,10 @@
 					value: 'hochschule',
 				},
 				{
+					label: 'Issuer.youthWelfare' | translate,
+					value: 'jugendhilfe',
+				},
+				{
 					label: 'Issuer.othersLabel' | translate,
 					value: 'andere',
 				},
