fix: dont shrink network image

--- a/src/app/issuer/components/network-dashboard/network-dashboard.component.html
+++ b/src/app/issuer/components/network-dashboard/network-dashboard.component.html
@@ -13,7 +13,7 @@
 				class="tw-flex tw-gap-4 tw-items-center"
 				[ngClass]="{ 'tw-pb-8 tw-mt-20': activeTab !== 'overview' }"
 			>
-				<div class="tw-bg-white tw-aspect-square tw-flex tw-items-center tw-justify-center">
+				<div class="tw-bg-white tw-aspect-square tw-flex tw-flex-shrink-0 tw-items-center tw-justify-center">
 					<img width="70px" [src]="network().image" alt="Network Logo" />
 				</div>
 				<div class="tw-flex tw-flex-col">
