--- a/src/app/profile/components/profile-edit/profile-edit.component.html
+++ b/src/app/profile/components/profile-edit/profile-edit.component.html
@@ -16,20 +16,24 @@
 	<div class="l-containerxaxis l-containeryaxis">
 		<form [formGroup]="profileEditForm.rawControl" (ngSubmit)="submitEdit()" class="l-form" novalidate>
 			<div class="u-width-form">
-				<bg-formfield-text
+				<oeb-input
 					[control]="profileEditForm.rawControlMap.firstName"
-					[label]="'First Name'"
-					[errorMessage]="'Please enter your first name'"
-					class="u-margin-bottom2x forminput-large"
-				>
-				</bg-formfield-text>
+					[label]="'Signup.fName' | translate"
+					[errorMessage]="'Signup.enterFirstName' | translate"
+				/>
 
-				<bg-formfield-text
+				<oeb-input
 					[control]="profileEditForm.rawControlMap.lastName"
-					[label]="'Last Name'"
-					[errorMessage]="'Please enter your last name'"
-					class="u-margin-bottom4x forminput-large"
-				></bg-formfield-text>
+					[label]="'Signup.lName' | translate"
+					[errorMessage]="'Signup.enterLastName' | translate"
+				/>
+
+				<oeb-input
+					label="{{ 'General.optionalPostalCode' | translate }}"
+					[control]="profileEditForm.rawControlMap.zipCode"
+					errorMessage="{{ 'Issuer.enterPostalCode' | translate }}"
+					[fieldType]="'number'"
+				/>
 			</div>
 
 			<div class="l-flex l-flex-1x">
