--- a/src/app/catalog/components/issuer-catalog/issuer-catalog.component.html
+++ b/src/app/catalog/components/issuer-catalog/issuer-catalog.component.html
@@ -116,6 +116,10 @@
 						{{ 'Issuer.categories.hochschule' | translate }}
 					</li>
 					<li>
+						<div class="color jugendhilfe"></div>
+						{{ 'Issuer.categories.jugendhilfe' | translate }}
+					</li>
+					<li>
 						<div class="color andere"></div>
 						{{ 'Issuer.categories.andere' | translate }}
 					</li>
