Fix/test findings 3 november (#1757)
* fix: dont wrap badge title

* fix: adjust font weight

* fix: translation

* fix: invite datatable translations

* fix: rm double colon

* fix: routing

* feat: max width for select

* feat: show message instead of disable

* feat: show micro degree option again

* fix: image distortion in long titles

* fix: svg trigger dimensions

* fix: if section

* fix: dont shrink network image

* fix: margin issuer role

* fix: check partner badges

* feat: improve responsiveness

* fix: redirect to partner tab after invite

* fix: update network list on issuer manager as well

* fix: add message for already shared badges

* fix: add failure message if issuer not on network

* fix: delete badge from network badges

---------

Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>
Co-authored-by: David Scheidt <scheidtdav@users.noreply.github.com>

--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -16,7 +16,7 @@
 				</h1>
 				<ng-container *ngIf="!public && isFullIssuer(issuer)">
 					<p
-						class="tw-text-oebblack tw-font-semibold md:tw-text-[20px] md:tw-leading-[24.4px] tw-text-[14px] tw-leading-[19.6px]"
+						class="tw-text-oebblack tw-mt-2 tw-font-semibold md:tw-text-[20px] md:tw-leading-[24.4px] tw-text-[14px] tw-leading-[19.6px]"
 					>
 						{{ 'Issuer.yourRole' | translate }}
 						{{ issuer.currentUserStaffMember?.roleInfo.label | translate }}
@@ -380,7 +380,7 @@
 							[recipientTranslation]="'Issuer.recipientsViaThisInstitution'"
 							(directBadgeAward)="routeToBadgeAward($event, issuer)"
 							(qrCodeAward)="routeToQRCodeAward($event, issuer)"
-							(redirectToBadgeDetail)="routeToBadgeDetail($event.badge, $event.focusRequests)"
+							(redirectToBadgeDetail)="routeToBadgeDetail($event.badge, issuer, $event.focusRequests)"
 						></badges-datatable>
 					</div>
 				}
