--- a/src/app/issuer/components/network-list/network-list.component.html
+++ b/src/app/issuer/components/network-list/network-list.component.html
@@ -12,7 +12,7 @@
 			[text]="'Network.create' | translate"
 		></oeb-button>
 	} @else {
-		<span class="tw-mt-8 tw-flex tw-text-oebblack tw-text-[22px]">{{
+		<span class="tw-mt-8 tw-flex tw-text-oebblack tw-text-lg">{{
 			'Issuer.yourIssuersAreInNetworks' | translate
 		}}</span>
 		<div class="md:tw-flex tw-mt-4">
